# dataset-miner

./: .gitignore  LICENCE  MANIFEST.in  README.md  cost_analyzer.py  data_extractor.py  file_processor.py  llm_utils.py  logging_utils.py  main.py  project_types.py  prompt_templates.py  pyproject.toml  rate_limiter.py  requirements.txt  setup.cfg  summary_log.py  verification.py
src/dataset_miner/: __init__.py  cli.py  data_extractor.py  file_processor.py  file_types.py  llm_utils.py  prompt_templates.py  rate_limiter.py  summary_log.py  verification.py
